--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "package.json"
   ],
   "dependencies": {
+    "dotenv": "^16.6.0",
     "fastmcp": "^1.27.3",
+    "openai": "^5.8.1",
     "path": "^0.12.7",
+    "readline": "^1.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
