--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "module": "NodeNext",
     "lib": [
       "ES2015",
