fix: add Node.js >=20.0.0 requirement to package.json engines
- Addresses Node 18 compatibility issues reported by users
- Ensures package fails early on unsupported Node versions
- Part of comprehensive README setup improvements

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "author": "aptoslabs.com",
   "type": "module",
   "description": "A MCP server for Aptos NPM packages",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=5.2.0"
+  },
   "files": [
     "dist",
     "package.json"
